--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cats World</title>
+    <meta name="description" content="CatsWorld, pagina oficial dedicada a nuestros amigos felinos">
     <link rel="shortcup icon" href="./assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,8 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c7476c2252.js" crossorigin="anonymous"></script>
@@ -24,7 +23,7 @@
     <div class="sas-container">
         <!-- header -->
         <header class="sas-header">
-            <h1 >CatsWebsite</h1>
+            <h1>CatsWebsite</h1>
             <img class="gif" src="./assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
         <!-- nav -->
@@ -59,12 +58,12 @@
                 </div>
             </div>
         </nav>
-    
+
         <!-- section -->
         <div class="sas-section">
             <section>
-                <h2 >¿Que son los gatos?.</h2>
-                <article >
+                <h2>¿Que son los gatos?.</h2>
+                <article>
                     <p>Gato, procedente del vocablo latino cattus, es un término que alude a un animal
                         mamífero que
                         forma parte
@@ -94,7 +93,7 @@
                 </article>
                 <h2>¿Por que un gato bufa y gruñe?</h2>
                 <article>
-                    <p >Los gatos bufan y gruñen cuando se sienten perturbados, amenazados o fuera de
+                    <p>Los gatos bufan y gruñen cuando se sienten perturbados, amenazados o fuera de
                         control. No viene de la
                         nada y sólo hacen esto, cuando sienten la presencia de algún problema. Pueden incluso y aunque
                         tu no
@@ -109,7 +108,7 @@
                         son los
                         que determinan una característica concreta, en este caso el color del pelo) o recesivos (todo lo
                         contrario).</p>
-                    <img src="./assets/img/razas.jpg" alt="Imagen de distintas razas de gatos" width="340px">
+                    <img class="razas" src="./assets/img/razas.jpg" alt="Imagen de distintas razas de gatos" width="340px">
                 </article>
             </section>
         </div>
@@ -120,7 +119,7 @@
         <!-- footer -->
         <footer id="footsas">
             <h3>&copy;Nahuel Mateo Bordon | Website</h3>
-            <a href="./Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
+            <a href="./pages/tienda.html"><i class="fa-solid fa-cat"></i></a>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
