--- a/CatWeb-Bordon/pages/contacto.html
+++ b/CatWeb-Bordon/pages/contacto.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>CatsWorld | Contact</title>
+    <meta name="description" content="Contactactanos mediante estos medios">
     <link rel="shortcup icon" href="../assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/stylee.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -64,17 +64,20 @@
 
             <ul class="contact">
                 <li>Instagram</li>
-                <ul>
-                    <li>@CatsWorld</li>
-                </ul>
+
+                <li> <a href="https://www.bing.com/ck/a?!&&p=bfe4ced15119d98423201410038128e387482e54c2b8557760267e18a3d5fad1JmltdHM9MTY1NzU3Mjk3NyZpZ3VpZD0yYjMxY2U2YS0zNDk3LTQxZjItYWVmYy1hOTA3MmRlMDgyMzEmaW5zaWQ9NTEzNg&ptn=3&hsh=1&fclid=e87b2f2b-015b-11ed-a5c3-a9cde771e269&u=a1aHR0cHM6Ly93d3cuaW5zdGFncmFtLmNvbS8_aGw9ZXM&ntb=1"
+                        target="_blank">@CatsWorld</a></li>
+
                 <li>Facebook</li>
-                <ul>
-                    <li>CatsWorldFB</li>
-                </ul>
+
+                <li> <a href="https://www.bing.com/ck/a?!&&p=b9341bb7e1acff638cacf660497bff14e0bfb8bbed9639d2e3fe8bcc548cf9f8JmltdHM9MTY1NzU3MzAyMSZpZ3VpZD04ZDQ2NjYzYS03MWI4LTQxNDItYTA5MC0zMjNkMDI3YzdhNDImaW5zaWQ9NTEzNg&ptn=3&hsh=1&fclid=0263da5b-015c-11ed-bdc6-52f8437523c0&u=a1aHR0cHM6Ly9lcy1sYS5mYWNlYm9vay5jb20v&ntb=1"
+                        target="_blank">CatsWorldFB</a> </li>
+
                 <li>WhatsApp</li>
-                <ul>
-                    <li>+54 387 483 998</li>
-                </ul>
+
+                <li> <a href="https://www.bing.com/ck/a?!&&p=cefa1ecd91a7b38f16e1cd3e61db04ca71906257f4d654d97fe294e3e08bfc63JmltdHM9MTY1NzU3MzA1MSZpZ3VpZD1lZGEwNDQ5Yi01ZTQ2LTQ0YzctYTZiNi01OGM5NzNiZmRkNmImaW5zaWQ9NTM5Nw&ptn=3&hsh=1&fclid=142cf090-015c-11ed-be94-0eb4e2aba35f&u=a1aHR0cHM6Ly93ZWIud2hhdHNhcHAuY29tLyVGMCU5RiU4QyU5MC9lcw&ntb=1"
+                        target="_blank">+54 387 483 998</a></li>
+
             </ul>
         </article>
         <h2>¿Como lo hago?</h2>
@@ -111,9 +114,9 @@
 
     <!-- footer -->
     <footer id="footsas">
-        <h3>&copy;Nahuel Mateo Bordon | Website</h3>
+        <h3>&copy;CatsWorld 2022 - support CatsWork@gmail.com</h3>
     </footer>
-    <a href="../Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
+    <a href="./tienda.htm"><i class="fa-solid fa-cat"></i></a>
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
